2007-11-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-02
	* converter: add ConverterBase, OnlineConverter, OfflineConverter
	* data: add ModifierInstructions and base ConfigurationModifier on
	it
	* two important bug fixes to the MySQL schema (procedures)
	 
2007-11-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-01
	* parser: account for subsystems and packages in AddProblem*
	scripts
	* confdb/parser: account for new format of problems.txt including
	subsystem and package for each template
	* confdb/converter: quick fix to account for es_prefer
	* confdb.migrator: account for es_prefer

2007-11-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-00
	* sql: add tables SoftwareSubsystems/SoftwarePackages, and a new
	foreign key 'packageId' to all *Templates tables. Propagate to
	stored procedures.
	* parser: fill the above tables accordingly for both MySQL and
	Oracle (Jonathan)
	* confdb/data: account for subsystems and packages in
	SoftwareRelease
	* confdb/gui: allow the user to browse the current release and all
	templates. So far, only subsystem/package/template is shown in the
	tree-dialog which appears if the release button is pressed in the
	upper left configuration panel
	* confdb/db: account for subsystems and releases in ConfDB when
	loading the release

2007-10-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-00
	* significantly improved db access performance, mainly due to the
	use of stored procedures and temporary tables
	* many parser patches, plus untracked parameters are not updated
	according to *.cfi files anymore
	* introduction of IConfiguration and ConfigurationModifier,
	converter/gui were partially migrated, but it isn't used much yet
	* ConverterEngine added
	* 'war' target added to build.xml, allows deployment to webserver
	(see README)
	* read-only operations now enabled for locked configurations