@@ -1,3 +1,11 @@
+2007-11-07  Philipp SCHIEFERDECKER <philipp.schieferdecker@cern.ch>
+
+	* tag V00-14-03
+	* parser: fix ShmStreamConsumer parameter list (JH)
+	* add missing features to OnlineConverter
+	* fixes to gui
+	* fixes to MySQL schema (procedures)
+
 2007-11-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-14-02
